--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -288,13 +288,13 @@
   "help_title": "Help :ring_buoy:",
   "help_description": "Do you want to play Mafia without extra difficulties? We are here to help you!\n**Mafia Bot** allows you to organize games that are perfect for you, as well as create, edit and use your own roles and end game conditions with Premium. Have a good time!",
   "help_commands_name": ":keyboard: Commands",
-  "help_commands_value": "</create:1015716817945247794> — create a new game\n</lang:1044351625621405797> — change language\n</profile:1100344392067338261> — view your profile\n</help:1100344392067338262> — you are here ^_^",
+  "help_commands_value": "</create:1015716817945247794> — create a new game\n</lang:1044351625621405797> — change the bot language\n</profile:1100344392067338261> — view your profile\n</help:1100344392067338262> — you are here ^_^",
   "help_faq_name": ":question: FAQ",
   "help_faq_value": ":small_orange_diamond: Can I play for free?\n:small_blue_diamond: Yes, you can join any games and create ones with default roles and end conditions for free. Premium allows you to create, edit and use custom roles and conditions.\n:small_orange_diamond: Who can I play with?\n:small_blue_diamond: Only users on the server with access to the channel where the game is created can join it.\n:small_orange_diamond: What should I do if something goes wrong?\n:small_blue_diamond: Please end the game and create a new one. Also please _message to support_ about what happened with the button below.\n:small_orange_diamond: Are all the players required to have Premium to play with custom stuff?\n:small_blue_diamond: No, only the host needs Premium.",
   "help_plans_name": ":crystal_ball: Plans for Future Updates",
   "help_plans_value": "We plan to empower game hosts, extend the user profile, add more actions for roles, custom game stages, new localizations and a lot more!",
   "help_about_name": ":notepad_spiral: About Mafia Bot",
-  "help_about_value": "`Version:` 2.0.5.\n`Source code:` https://github.com/Pazzann/mafia-bot\n`Official server:` https://discord.gg/ZWnx8rqGTD\n`Development:` Boy From God#2772\n`Text:` denyshon#9143, Boy From God#2772\n`Localization:` denyshon#9143 (`uk`, `ru`), Boy From God#2772 (`fu`)\n`Arts:` Midjourney, popa_sani#4041",
+  "help_about_value": "`Version:` 2.0.0 (alpha).\n`Source code:` https://github.com/Pazzann/mafia-bot\n`Official server:` https://discord.gg/ZWnx8rqGTD\n`Development:` Boy From God#2772\n`Text:` denyshon#9143, Boy From God#2772\n`Localization:` denyshon#9143 (`uk`, `ru`), Boy From God#2772 (`fu`)\n`Arts:` Midjourney, popa_sani#4041",
 
   "help_button_rules": "Game Rules",
   "help_button_scripting": "Scripting",
