--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -160,18 +160,18 @@
   "role_create_roleName_label": "Название",
   "role_create_roleName_placeHolder": "название вашей роли",
   "role_create_roleDescription_label": "Описание",
-  "role_create_roleDescription_placeHolder": "описание вашей роли; информация о создании скриптов в /help → Создание скриптов",
+  "role_create_roleDescription_placeHolder": "описание вашей роли; информация о создании скриптов в /помощь → Создание скриптов",
   "role_create_roleImage_label": "Ссылка на миниатюру",
   "role_create_roleImage_placeHolder": "ссылка на изображение для миниатюры",
   "role_create_roleCount_label": "Количество",
-  "role_create_roleCount_placeHolder": "количество игроков с вашей ролью; информация о создании скриптов в /help → Создание скриптов",
+  "role_create_roleCount_placeHolder": "количество игроков с вашей ролью; информация о создании скриптов в /помощь → Создание скриптов",
   "role_create_rolePlaceHolder_label": "Плейсхолдер для меню действия",
   "role_create_rolePlaceHolder_placeHolder": "плейсхолдер для меню действия вашей роли",
   "role_create_goNext_button": "Перейти далее",
   "role_create_goNext_message": "Нажмите кнопку, чтобы продолжить:",
   "role_create_title2": "Создание роли: ",
   "role_create_roleAction_label": "Действие",
-  "role_create_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity ; подробности в /help → Создание скриптов",
+  "role_create_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity ; подробности в /помощь → Создание скриптов",
   "role_create_roleSelectable_label": "Может выбирать себя?",
   "role_create_roleSelectable_placeHolder": "true | false",
   "role_create_roleDelay_label": "Задержка между действиями",
@@ -202,11 +202,11 @@
   "role_edit_roleName_label": "Название",
   "role_edit_roleName_placeHolder": "новое название вашей роли",
   "role_edit_roleDescription_label": "Описание",
-  "role_edit_roleDescription_placeHolder": "новое описание вашей роли; информация о создании скриптов в /help → Создание скриптов",
+  "role_edit_roleDescription_placeHolder": "новое описание вашей роли; информация о создании скриптов в /помощь → Создание скриптов",
   "role_edit_roleImage_label": "Ссылка на миниатюру",
   "role_edit_roleImage_placeHolder": "ссылка на ваше новое изображение",
   "role_edit_roleCount_label": "Количество",
-  "role_edit_roleCount_placeHolder": "новое количество игроков с вашей ролью; информация о создании скриптов в /help → Создание скриптов",
+  "role_edit_roleCount_placeHolder": "новое количество игроков с вашей ролью; информация о создании скриптов в /помощь → Создание скриптов",
   "role_edit_rolePlaceHolder_label": "Плейсхолдер для меню действия",
   "role_edit_rolePlaceHolder_placeHolder": "новый плейсхолдер для меню действия вашей роли",
   "role_edit_roleAction_label": "Действие",
@@ -245,7 +245,7 @@
   "condition_create_goNext_message": "Нажмите кнопку, чтобы продолжить:",
   "condition_create_title2": "Создание условия: ",
   "condition_create_condition_label": "Условие",
-  "condition_create_condition_placeHolder": "ваше условие; информация о создании скриптов в /help → Создание скриптов",
+  "condition_create_condition_placeHolder": "ваше условие; информация о создании скриптов в /помощь → Создание скриптов",
   "condition_create_embedTitle_label": "Заголовок",
   "condition_create_embedTitle_placeHolder": "Побеждает мафия ;)",
   "condition_create_embedDescription_label": "Описание",
@@ -262,11 +262,11 @@
   "condition_edit_select_placeHolder": "Выберите условие для изменения...",
   "condition_edit_title": "Изменение условия: ",
   "condition_edit_condition_label": "Условие",
-  "condition_edit_condition_placeHolder": "ваше новое условие; информация о создании скриптов в /help → Создание скриптов",
+  "condition_edit_condition_placeHolder": "ваше новое условие; информация о создании скриптов в /помощь → Создание скриптов",
   "condition_edit_embedTitle_label": "Заголовок",
   "condition_edit_embedTitle_placeHolder": "новый заголовок вашего условия",
   "condition_edit_embedDescription_label": "Описание",
-  "condition_edit_embedDescription_placeHolder": "новое описание вашего условия; информация о создании скриптов в /help → Создание скриптов",
+  "condition_edit_embedDescription_placeHolder": "новое описание вашего условия; информация о создании скриптов в /помощь → Создание скриптов",
   "condition_edit_embedThumbnail_label": "Ссылка на миниатюру",
   "condition_edit_embedThumbnail_placeHolder": "ссылка на ваше новое изображение",
   "condition_edit_winRole_label": "Роль, которая побеждает",
@@ -288,13 +288,13 @@
   "help_title": "Справка :ring_buoy:",
   "help_description": "Хотите поиграть в «Мафию» без лишних сложностей? Мы рады вам помочь!\n**Mafia Bot** позволяет организовывать игры, идеально подходящие именно вам, а также создавать, изменять и использовать собственные роли и условия окончания игры с Premium. Желаем хорошо провести время!",
   "help_commands_name": ":keyboard: Команды",
-  "help_commands_value": "</create:1015716817945247794> — создать новую игру\n</lang:1044351625621405797> — изменить язык\n</profile:1100344392067338261> — просмотреть свой профиль\n</help:1100344392067338262> — вы здесь ^_^",
+  "help_commands_value": "</create:1015716817945247794> — создать новую игру\n</lang:1044351625621405797> — изменить язык бота\n</profile:1100344392067338261> — просмотреть свой профиль\n</help:1100344392067338262> — вы здесь ^_^",
   "help_faq_name": ":question: ЧЗВ",
   "help_faq_value": ":small_orange_diamond: Могу ли я играть бесплатно?\n:small_blue_diamond: Да, вы можете свободно присоединяться к любым играм и создавать свои со стандартными ролями и условиями окончания. Premium позволяет создавать, изменять и использовать собственные роли и условия.\n:small_orange_diamond: С кем я могу играть?\n:small_blue_diamond: Только пользователи, которые есть на сервере и имеют доступ к каналу, где создаётся игра, могут присоединиться к ней.\n:small_orange_diamond: Что мне делать, если что-то идёт не так?\n:small_blue_diamond: Закончите игру и создайте новую. Также, пожалуйста, _напишите в поддержку_ о том, что произошло, с помощью кнопки ниже.\n:small_orange_diamond: Все ли игроки должны иметь Premium, чтобы играть с нестандартными элементами?\n:small_blue_diamond: Нет, Premium необходим только организатору.",
   "help_plans_name": ":crystal_ball: Планы на будущие обовления",
   "help_plans_value": "Мы планируем предоставить больше возможностей организаторам игр, расширить профиль пользователя, добавить больше действий для ролей, кастомизацию этапов игры, новые локализации и многое другое!",
   "help_about_name": ":notepad_spiral: О Mafia Bot",
-  "help_about_value": "`Версия:` 2.0.5.\n`Исходный код:` https://github.com/Pazzann/mafia-bot\n`Официальный сервер:` https://discord.gg/ZWnx8rqGTD\n`Разработка:` Boy From God#2772\n`Тексты:` denyshon#9143, Boy From God#2772\n`Локализация:` denyshon#9143 (`uk`, `ru`), Boy From God#2772 (`fu`)\n`Арты:` Midjourney, popa_sani#4041",
+  "help_about_value": "`Версия:` 2.0.0 (альфа).\n`Исходный код:` https://github.com/Pazzann/mafia-bot\n`Официальный сервер:` https://discord.gg/ZWnx8rqGTD\n`Разработка:` Boy From God#2772\n`Тексты:` denyshon#9143, Boy From God#2772\n`Локализация:` denyshon#9143 (`uk`, `ru`), Boy From God#2772 (`fu`)\n`Арты:` Midjourney, popa_sani#4041",
 
   "help_button_rules": "Правила игры",
   "help_button_scripting": "Создание скриптов",
