--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -160,18 +160,18 @@
   "role_create_roleName_label": "Назва",
   "role_create_roleName_placeHolder": "назва вашої ролі",
   "role_create_roleDescription_label": "Опис",
-  "role_create_roleDescription_placeHolder": "опис вашої ролі; інформація про створення скриптів у /help → Створення скриптів",
+  "role_create_roleDescription_placeHolder": "опис вашої ролі; інформація про створення скриптів у /допомога → Створення скриптів",
   "role_create_roleImage_label": "Посилання на мініатюру",
   "role_create_roleImage_placeHolder": "посилання на зображення для мініатюри",
   "role_create_roleCount_label": "Кількість",
-  "role_create_roleCount_placeHolder": "кількість гравців із вашою роллю; інформація про створення скриптів у /help → Створення скриптів",
+  "role_create_roleCount_placeHolder": "кількість гравців із вашою роллю; інформація про створення скриптів у /допомога → Створення скриптів",
   "role_create_rolePlaceHolder_label": "Плейсхолдер для меню дії",
   "role_create_rolePlaceHolder_placeHolder": "плейсхолдер для меню дії вашої ролі",
   "role_create_goNext_button": "Перейти далі",
   "role_create_goNext_message": "Натисніть кнопку, щоби продовжити:",
   "role_create_title2": "Створення ролі: ",
   "role_create_roleAction_label": "Дія",
-  "role_create_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity ; подробиці в /help → Створення скриптів",
+  "role_create_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity ; подробиці в /допомога → Створення скриптів",
   "role_create_roleSelectable_label": "Чи може обирати себе?",
   "role_create_roleSelectable_placeHolder": "true | false",
   "role_create_roleDelay_label": "Затримка між діями",
@@ -202,11 +202,11 @@
   "role_edit_roleName_label": "Назва",
   "role_edit_roleName_placeHolder": "нова назва вашої ролі",
   "role_edit_roleDescription_label": "Опис",
-  "role_edit_roleDescription_placeHolder": "новий опис вашої ролі; інформація про створення скриптів у /help → Створення скриптів",
+  "role_edit_roleDescription_placeHolder": "новий опис вашої ролі; інформація про створення скриптів у /допомога → Створення скриптів",
   "role_edit_roleImage_label": "Посилання на мініатюру",
   "role_edit_roleImage_placeHolder": "посилання на ваше нове зображення",
   "role_edit_roleCount_label": "Кількість",
-  "role_edit_roleCount_placeHolder": "нова кількість гравців з вашою роллю; інформація про створення скриптів у /help → Створення скриптів",
+  "role_edit_roleCount_placeHolder": "нова кількість гравців з вашою роллю; інформація про створення скриптів у /допомога → Створення скриптів",
   "role_edit_rolePlaceHolder_label": "Плейсхолдер для меню дії",
   "role_edit_rolePlaceHolder_placeHolder": "новий плейсхолдер для меню дії вашої ролі",
   "role_edit_roleAction_label": "Дія",
@@ -245,7 +245,7 @@
   "condition_create_goNext_message": "Натисніть кнопку, щоби продовжити:",
   "condition_create_title2": "Створення умови: ",
   "condition_create_condition_label": "Умова",
-  "condition_create_condition_placeHolder": "ваша умова; інформація про створення скриптів у /help → Створення скриптів",
+  "condition_create_condition_placeHolder": "ваша умова; інформація про створення скриптів у /допомога → Створення скриптів",
   "condition_create_embedTitle_label": "Заголовок",
   "condition_create_embedTitle_placeHolder": "Перемагає мафія ;)",
   "condition_create_embedDescription_label": "Опис",
@@ -262,11 +262,11 @@
   "condition_edit_select_placeHolder": "Оберіть умову для змінення...",
   "condition_edit_title": "Змінення умови: ",
   "condition_edit_condition_label": "Умова",
-  "condition_edit_condition_placeHolder": "ваша нова умова; інформація про створення скриптів у /help → Створення скриптів",
+  "condition_edit_condition_placeHolder": "ваша нова умова; інформація про створення скриптів у /допомога → Створення скриптів",
   "condition_edit_embedTitle_label": "Заголовок",
   "condition_edit_embedTitle_placeHolder": "новий заголовок вашої умови",
   "condition_edit_embedDescription_label": "Опис",
-  "condition_edit_embedDescription_placeHolder": "новий опис вашої умови; інформація про створення скриптів у /help → Створення скриптів",
+  "condition_edit_embedDescription_placeHolder": "новий опис вашої умови; інформація про створення скриптів у /допомога → Створення скриптів",
   "condition_edit_embedThumbnail_label": "Посилання на мініатюру",
   "condition_edit_embedThumbnail_placeHolder": "посилання на ваше нове зображення",
   "condition_edit_winRole_label": "Роль, що перемагає",
@@ -288,13 +288,13 @@
   "help_title": "Довідка :ring_buoy:",
   "help_description": "Хочете пограти в «Мафію» без зайвих труднощів? Ми раді вам допомогти!\n**Mafia Bot** дає змогу організовувати ігри, що ідеально підходять саме вам, а також створювати, змінювати та використовувати власні ролі та умови завершення гри з Premium. Бажаємо добре провести час!",
   "help_commands_name": ":keyboard: Команди",
-  "help_commands_value": "</create:1015716817945247794> — створити нову гру\n</lang:1044351625621405797> — змінити мову\n</profile:1100344392067338261> — переглянути свій профіль\n</help:1100344392067338262> — ви тут ^_^",
+  "help_commands_value": "</create:1015716817945247794> — створити нову гру\n</lang:1044351625621405797> — змінити мову бота\n</profile:1100344392067338261> — переглянути свій профіль\n</help:1100344392067338262> — ви тут ^_^",
   "help_faq_name": ":question: ЧаП",
-  "help_faq_value": ":small_orange_diamond: Чи можу я грати безкоштовно?\n:small_blue_diamond: Так, ви можете вільно приєднуватися до будь-яких ігор і створювати власні зі стандартними ролями та умовами завершення. Premium дає змогу створювати, змінювати та використовувати власні ролі та умови.\n:small_orange_diamond: З ким я можу грати?\n:small_blue_diamond: Тільки користувачі, що є на сервері та мають доступ до каналу, де створюється гра, можуть приєднатися до неї.\n:small_orange_diamond: What should I do if something goes wrong?\n:small_blue_diamond: Please end the game and create a new one. Also please _message to support_ about what happened with the button below.\n:small_orange_diamond: Are all the players required to have Premium to play with custom stuff?\n:small_blue_diamond: No, only the host needs Premium.",
+  "help_faq_value": ":small_orange_diamond: Чи можу я грати безкоштовно?\n:small_blue_diamond: Так, ви можете вільно приєднуватися до будь-яких ігор і створювати власні зі стандартними ролями та умовами завершення. Premium дає змогу створювати, змінювати та використовувати власні ролі та умови.\n:small_orange_diamond: З ким я можу грати?\n:small_blue_diamond: Тільки користувачі, що є на сервері та мають доступ до каналу, де створюється гра, можуть приєднатися до неї.\n:small_orange_diamond: Що мені робити, якщо щось іде не так?\n:small_blue_diamond: Закінчіть гру та створіть нову. Також, будь ласка, _напишіть до підтримки_ про те, що сталося, за допомогою кнопки нижче.\n:small_orange_diamond: Чи всім гравцям треба мати Premium, щоб грати з нестандартними елементами?\n:small_blue_diamond: Ні, Premium необхідний тільки організатору.",
   "help_plans_name": ":crystal_ball: Плани щодо майбутніх оновлень",
-  "help_plans_value": "We plan to empower game hosts, extend the user profile, add more actions for roles, custom game stages, new localizations and a lot more!",
+  "help_plans_value": "Ми плануємо надати більше можливостей організаторам ігор, розширити профіль користувача, додати більше дій для ролей, кастомізацію етапів гри, нові локалізації та багато іншого!",
   "help_about_name": ":notepad_spiral: Про Mafia Bot",
-  "help_about_value": "`Версія:` 2.0.5.\n`Вихідний код:` https://github.com/Pazzann/mafia-bot\n`Офіційний сервер:` https://discord.gg/ZWnx8rqGTD\n`Розробка:` Boy From God#2772\n`Тексти:` denyshon#9143, Boy From God#2772\n`Локалізація:` denyshon#9143 (`uk`, `ru`), Boy From God#2772 (`fu`)\n`Арти:` Midjourney, popa_sani#4041",
+  "help_about_value": "`Версія:` 2.0.0 (альфа).\n`Вихідний код:` https://github.com/Pazzann/mafia-bot\n`Офіційний сервер:` https://discord.gg/ZWnx8rqGTD\n`Розробка:` Boy From God#2772\n`Тексти:` denyshon#9143, Boy From God#2772\n`Локалізація:` denyshon#9143 (`uk`, `ru`), Boy From God#2772 (`fu`)\n`Арти:` Midjourney, popa_sani#4041",
 
   "help_button_rules": "Правила гри",
   "help_button_scripting": "Створення скриптів",
