--- a/src/langs/fu.json
+++ b/src/langs/fu.json
@@ -285,17 +285,26 @@
   "news_enable_success_message": ":white_check_mark: Сповіщення про новини успішно ввімкнено!",
   "news_disable_success_message": ":ballot_box_with_check: Сповіщення про новини успішно вимкнено.",
 
+  "help_title": "Довідка :ring_buoy:",
+  "help_description": "Хочете пограти в «Мафію» без зайвих труднощів? Ми раді вам допомогти!\n**Mafia Bot** дає змогу організовувати ігри, що ідеально підходять саме вам, а також створювати, змінювати та використовувати власні ролі та умови завершення гри з Premium. Бажаємо добре провести час!",
+  "help_commands_name": ":keyboard: Команди",
+  "help_commands_value": "</create:1015716817945247794> — створити нову гру\n</lang:1044351625621405797> — змінити мову бота\n</profile:1100344392067338261> — переглянути свій профіль\n</help:1100344392067338262> — ви тут ^_^",
+  "help_faq_name": ":question: ЧаП",
+  "help_faq_value": ":small_orange_diamond: Чи можу я грати безкоштовно?\n:small_blue_diamond: Так, ви можете вільно приєднуватися до будь-яких ігор і створювати власні зі стандартними ролями та умовами завершення. Premium дає змогу створювати, змінювати та використовувати власні ролі та умови.\n:small_orange_diamond: З ким я можу грати?\n:small_blue_diamond: Тільки користувачі, що є на сервері та мають доступ до каналу, де створюється гра, можуть приєднатися до неї.\n:small_orange_diamond: Що мені робити, якщо щось іде не так?\n:small_blue_diamond: Закінчіть гру та створіть нову. Також, будь ласка, _напишіть до підтримки_ про те, що сталося, за допомогою кнопки нижче.\n:small_orange_diamond: Чи всім гравцям треба мати Premium, щоб грати з нестандартними елементами?\n:small_blue_diamond: Ні, Premium необхідний тільки організатору.",
+  "help_plans_name": ":crystal_ball: Плани щодо майбутніх оновлень",
+  "help_plans_value": "Ми плануємо надати більше можливостей організаторам ігор, розширити профіль користувача, додати більше дій для ролей, кастомізацію етапів гри, нові локалізації та багато іншого!",
+  "help_about_name": ":notepad_spiral: Про Mafia Bot",
+  "help_about_value": "`Версія:` 2.0.0 (альфа).\n`Вихідний код:` https://github.com/Pazzann/mafia-bot\n`Офіційний сервер:` https://discord.gg/ZWnx8rqGTD\n`Розробка:` Boy From God#2772\n`Тексти:` denyshon#9143, Boy From God#2772\n`Локалізація:` denyshon#9143 (`uk`, `ru`), Boy From God#2772 (`fu`)\n`Арти:` Midjourney, popa_sani#4041",
+
   "help_button_rules": "Правила гри",
   "help_button_scripting": "Створення скриптів",
   "help_button_helpmessage": "Написати до СБУ",
 
   "helpMessage_title": "Повідомлення до СБУ",
   "helpMessage_text_label": "Повідомлення",
-  "helpMessage_text_placeHolder": "опишіть свою проблему, ідею чи пропозицію :)",
+  "helpMessage_text_placeHolder": "кого та за що відправити на підвал?",
 
-  "error_notInGame": ":man_gesturing_no: Зараз ви не ріжете русні. Може станете отаманом?!",
+  "error_notInGame": ":man_gesturing_no: Зараз ви не ріжете русню. Може, станете отаманом?",
   "error_premium": "Вибачте, у вас немає Premium, щоб створювати власні подоби та умови!",
   "error_unknown": "Сталася помилка, будь ласка, зверніться до СБУ!"
-
-
 }
