--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -294,7 +294,7 @@
   "help_plans_name": ":crystal_ball: Plans for Future Updates",
   "help_plans_value": "We plan to empower game hosts, extend the user profile, add more actions for roles, custom game stages, new localizations and a lot more!",
   "help_about_name": ":notepad_spiral: About Mafia Bot",
-  "help_about_value": "`Version:` 2.0.0 (alpha).\n`Source code:` https://github.com/Pazzann/mafia-bot\n`Official server:` https://discord.gg/ZWnx8rqGTD\n`Development:` Boy From God#2772\n`Text:` denyshon#9143, Boy From God#2772\n`Localization:` denyshon#9143 (`uk`, `ru`), Boy From God#2772 (`fu`)\n`Arts:` Midjourney, popa_sani#4041",
+  "help_about_value": "`Version:` 2.0.0 (alpha)\n`Source code:` https://github.com/Pazzann/mafia-bot\n`Official server:` https://discord.gg/ZWnx8rqGTD\n`Development:` Boy From God#2772\n`Text:` denyshon#9143, Boy From God#2772\n`Localization:` denyshon#9143 (`uk`, `ru`), Boy From God#2772 (`fu`)\n`Arts:` Midjourney, popa_sani#4041",
 
   "help_button_rules": "Game Rules",
   "help_button_scripting": "Scripting",
