--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -294,7 +294,7 @@
   "help_plans_name": ":crystal_ball: Плани щодо майбутніх оновлень",
   "help_plans_value": "Ми плануємо надати більше можливостей організаторам ігор, розширити профіль користувача, додати більше дій для ролей, кастомізацію етапів гри, нові локалізації та багато іншого!",
   "help_about_name": ":notepad_spiral: Про Mafia Bot",
-  "help_about_value": "`Версія:` 2.0.0 (альфа).\n`Вихідний код:` https://github.com/Pazzann/mafia-bot\n`Офіційний сервер:` https://discord.gg/ZWnx8rqGTD\n`Розробка:` Boy From God#2772\n`Тексти:` denyshon#9143, Boy From God#2772\n`Локалізація:` denyshon#9143 (`uk`, `ru`), Boy From God#2772 (`fu`)\n`Арти:` Midjourney, popa_sani#4041",
+  "help_about_value": "`Версія:` 2.0.0 (альфа)\n`Вихідний код:` https://github.com/Pazzann/mafia-bot\n`Офіційний сервер:` https://discord.gg/ZWnx8rqGTD\n`Розробка:` Boy From God#2772\n`Тексти:` denyshon#9143, Boy From God#2772\n`Локалізація:` denyshon#9143 (`uk`, `ru`), Boy From God#2772 (`fu`)\n`Арти:` Midjourney, popa_sani#4041",
 
   "help_button_rules": "Правила гри",
   "help_button_scripting": "Створення скриптів",
