--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -40,7 +40,9 @@
   "game_leave_success_message": ":ballot_box_with_check: Ви успішно залишили гру.",
   "game_edit_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете змінювати цю гру, бо не є її організатором!",
   "game_edit_roles_placeHolder": "Оберіть ролі...",
+  "game_edit_roles_error_notFound": ":jigsaw: Роль не знайдено! Можливо, її було видалено.",
   "game_edit_conditions_placeHolder": "Оберіть умови завершення гри...",
+  "game_edit_conditions_error_notFound": ":jigsaw: Умову не знайдено! Можливо, її було видалено.",
   "game_edit_button_votes_hide": "Приховувати голоси",
   "game_edit_button_votes_notHide" : "Не приховувати голоси",
   "game_edit_success_message": ":white_check_mark: Гру успішно змінено!",
@@ -101,7 +103,7 @@
   "condition_killerWin_WinEmbedDescription": "%Маніяк {sr:killer:string} переміг — усе місто вирізано.%",
   "condition_peacefulWin_name": "Умова перемоги мирних",
   "condition_peacefulWin_WinEmbedTitle": "Мирні перемогли!",
-  "condition_peacefulWin_WinEmbedDescription": "%Мирні перемогли — злочинців у місті не лишилося.\nУбивцями були: {sr:killer:string}.%",
+  "condition_peacefulWin_WinEmbedDescription": "%Мирні перемогли — злочинців у місті не лишилося.\nУбивцями були: {sa:killer:string}.%",
 
   "role_embed_action_name": "Дія",
   "role_embed_groupDec_name": "Чи грає в групі?",
@@ -124,7 +126,7 @@
   "profile_totalWins": ":trophy: Усього перемог:",
   "profile_premium": ":dollar: Premium:",
   "profile_premium_purchased": "активний",
-  "profile_premium_notPurchased": "неактивнийй",
+  "profile_premium_notPurchased": "неактивний",
   "profile_button_premium": "Premium",
   "profile_button_custom": "Кастомізація",
   "profile_button_news": "Сповіщення про новини",
