--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -162,11 +162,11 @@
   "role_create_roleName_label": "Назва",
   "role_create_roleName_placeHolder": "назва вашої ролі",
   "role_create_roleDescription_label": "Опис",
-  "role_create_roleDescription_placeHolder": "опис вашої ролі; інформація про створення скриптів у /допомога → Створення скриптів",
+  "role_create_roleDescription_placeHolder": "опис вашої ролі; інформація про скрипти: /допомога → Створення скриптів",
   "role_create_roleImage_label": "Посилання на мініатюру",
   "role_create_roleImage_placeHolder": "посилання на зображення для мініатюри",
   "role_create_roleCount_label": "Кількість",
-  "role_create_roleCount_placeHolder": "кількість гравців із вашою роллю; інформація про створення скриптів у /допомога → Створення скриптів",
+  "role_create_roleCount_placeHolder": "кількість гравців із вашою роллю; інформація про скрипти: /допомога → Створення скриптів",
   "role_create_rolePlaceHolder_label": "Плейсхолдер для меню дії",
   "role_create_rolePlaceHolder_placeHolder": "плейсхолдер для меню дії вашої ролі",
   "role_create_goNext_button": "Перейти далі",
@@ -204,11 +204,11 @@
   "role_edit_roleName_label": "Назва",
   "role_edit_roleName_placeHolder": "нова назва вашої ролі",
   "role_edit_roleDescription_label": "Опис",
-  "role_edit_roleDescription_placeHolder": "новий опис вашої ролі; інформація про створення скриптів у /допомога → Створення скриптів",
+  "role_edit_roleDescription_placeHolder": "новий опис вашої ролі; інформація про скрипти: /допомога → Створення скриптів",
   "role_edit_roleImage_label": "Посилання на мініатюру",
   "role_edit_roleImage_placeHolder": "посилання на ваше нове зображення",
   "role_edit_roleCount_label": "Кількість",
-  "role_edit_roleCount_placeHolder": "нова кількість гравців з вашою роллю; інформація про створення скриптів у /допомога → Створення скриптів",
+  "role_edit_roleCount_placeHolder": "нова кількість гравців з вашою роллю; інформація про скрипти: /допомога → Створення скриптів",
   "role_edit_rolePlaceHolder_label": "Плейсхолдер для меню дії",
   "role_edit_rolePlaceHolder_placeHolder": "новий плейсхолдер для меню дії вашої ролі",
   "role_edit_roleAction_label": "Дія",
@@ -247,7 +247,7 @@
   "condition_create_goNext_message": "Натисніть кнопку, щоби продовжити:",
   "condition_create_title2": "Створення умови: ",
   "condition_create_condition_label": "Умова",
-  "condition_create_condition_placeHolder": "ваша умова; інформація про створення скриптів у /допомога → Створення скриптів",
+  "condition_create_condition_placeHolder": "ваша умова; інформація про скрипти: /допомога → Створення скриптів",
   "condition_create_embedTitle_label": "Заголовок",
   "condition_create_embedTitle_placeHolder": "Перемагає мафія ;)",
   "condition_create_embedDescription_label": "Опис",
@@ -264,11 +264,11 @@
   "condition_edit_select_placeHolder": "Оберіть умову для змінення...",
   "condition_edit_title": "Змінення умови: ",
   "condition_edit_condition_label": "Умова",
-  "condition_edit_condition_placeHolder": "ваша нова умова; інформація про створення скриптів у /допомога → Створення скриптів",
+  "condition_edit_condition_placeHolder": "ваша нова умова; інформація про скрипти: /допомога → Створення скриптів",
   "condition_edit_embedTitle_label": "Заголовок",
   "condition_edit_embedTitle_placeHolder": "новий заголовок вашої умови",
   "condition_edit_embedDescription_label": "Опис",
-  "condition_edit_embedDescription_placeHolder": "новий опис вашої умови; інформація про створення скриптів у /допомога → Створення скриптів",
+  "condition_edit_embedDescription_placeHolder": "новий опис вашої умови; інформація про скрипти: /допомога → Створення скриптів",
   "condition_edit_embedThumbnail_label": "Посилання на мініатюру",
   "condition_edit_embedThumbnail_placeHolder": "посилання на ваше нове зображення",
   "condition_edit_winRole_label": "Роль, що перемагає",
