--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -162,11 +162,11 @@
   "role_create_roleName_label": "Название",
   "role_create_roleName_placeHolder": "название вашей роли",
   "role_create_roleDescription_label": "Описание",
-  "role_create_roleDescription_placeHolder": "описание вашей роли; информация о создании скриптов в /помощь → Создание скриптов",
+  "role_create_roleDescription_placeHolder": "описание вашей роли; информация о скриптах: /помощь → Создание скриптов",
   "role_create_roleImage_label": "Ссылка на миниатюру",
   "role_create_roleImage_placeHolder": "ссылка на изображение для миниатюры",
   "role_create_roleCount_label": "Количество",
-  "role_create_roleCount_placeHolder": "количество игроков с вашей ролью; информация о создании скриптов в /помощь → Создание скриптов",
+  "role_create_roleCount_placeHolder": "количество игроков с вашей ролью; информация о скриптах: /помощь → Создание скриптов",
   "role_create_rolePlaceHolder_label": "Плейсхолдер для меню действия",
   "role_create_rolePlaceHolder_placeHolder": "плейсхолдер для меню действия вашей роли",
   "role_create_goNext_button": "Перейти далее",
@@ -204,11 +204,11 @@
   "role_edit_roleName_label": "Название",
   "role_edit_roleName_placeHolder": "новое название вашей роли",
   "role_edit_roleDescription_label": "Описание",
-  "role_edit_roleDescription_placeHolder": "новое описание вашей роли; информация о создании скриптов в /помощь → Создание скриптов",
+  "role_edit_roleDescription_placeHolder": "новое описание вашей роли; информация о скриптах: /помощь → Создание скриптов",
   "role_edit_roleImage_label": "Ссылка на миниатюру",
   "role_edit_roleImage_placeHolder": "ссылка на ваше новое изображение",
   "role_edit_roleCount_label": "Количество",
-  "role_edit_roleCount_placeHolder": "новое количество игроков с вашей ролью; информация о создании скриптов в /помощь → Создание скриптов",
+  "role_edit_roleCount_placeHolder": "новое количество игроков с вашей ролью; информация о скриптах: /помощь → Создание скриптов",
   "role_edit_rolePlaceHolder_label": "Плейсхолдер для меню действия",
   "role_edit_rolePlaceHolder_placeHolder": "новый плейсхолдер для меню действия вашей роли",
   "role_edit_roleAction_label": "Действие",
@@ -247,7 +247,7 @@
   "condition_create_goNext_message": "Нажмите кнопку, чтобы продолжить:",
   "condition_create_title2": "Создание условия: ",
   "condition_create_condition_label": "Условие",
-  "condition_create_condition_placeHolder": "ваше условие; информация о создании скриптов в /помощь → Создание скриптов",
+  "condition_create_condition_placeHolder": "ваше условие; информация о скриптах: /помощь → Создание скриптов",
   "condition_create_embedTitle_label": "Заголовок",
   "condition_create_embedTitle_placeHolder": "Побеждает мафия ;)",
   "condition_create_embedDescription_label": "Описание",
@@ -264,11 +264,11 @@
   "condition_edit_select_placeHolder": "Выберите условие для изменения...",
   "condition_edit_title": "Изменение условия: ",
   "condition_edit_condition_label": "Условие",
-  "condition_edit_condition_placeHolder": "ваше новое условие; информация о создании скриптов в /помощь → Создание скриптов",
+  "condition_edit_condition_placeHolder": "ваше новое условие; информация о скриптах: /помощь → Создание скриптов",
   "condition_edit_embedTitle_label": "Заголовок",
   "condition_edit_embedTitle_placeHolder": "новый заголовок вашего условия",
   "condition_edit_embedDescription_label": "Описание",
-  "condition_edit_embedDescription_placeHolder": "новое описание вашего условия; информация о создании скриптов в /помощь → Создание скриптов",
+  "condition_edit_embedDescription_placeHolder": "новое описание вашего условия; информация о скриптах: /помощь → Создание скриптов",
   "condition_edit_embedThumbnail_label": "Ссылка на миниатюру",
   "condition_edit_embedThumbnail_placeHolder": "ссылка на ваше новое изображение",
   "condition_edit_winRole_label": "Роль, которая побеждает",
